# bip46

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: mypy.yml  tests.yml
bip46/: __init__.py  certificate.py  cli.py  consts.py  derivation.py  electrs.py  exceptions.py  hdkey.py  script.py
examples/: example_create_timelock.py  example_create_timelock_address.py  example_hd_derive.py  example_withdraw_timelock.py
tests/: test_certificate_message.py  test_create_timelock_address.py  test_timelock_derivation.py  test_vectors.py
